# linkedevents-xcal-rss

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  azure-pipelines-linkedevents-xcal-rss-testprod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postcreatecommand.sh
src/: entrypoint.sh  main.py
src/rss_feed/: __init__.py  rss_response.py
src/rss_feed/models/: __init__.py  category.py  cloud.py  enclosure.py  feed.py  guid.py  image.py  item.py  source.py  textinput.py
