[tool.poetry]
name = "helmet-events-rss-feed"
version = "0.1.0"
description = ""
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>", "Jiri Grönroos <jiri.gronroos@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.110.1"
pydantic-xml = "^2.9.0"
loguru = "^0.7.2"
uvicorn = "^0.29.0"
jsonpath-ng = "^1.6.1"
python-dateutil="^2.9.0"
pillow="^10.3.0"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
certifi = "^2024.2.2"
click = "^8.1.7"
colorama = "^0.4.6"
feedgen = "^1.0.0"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httpx = "^0.27.0"
idna = "^3.7"
lxml = "^5.2.1"
pydantic-core = "^2.18.1"
pydantic = "^2.7.0"
six = "^1.16.0"
sniffio = "^1.3.1"
starlette = "^0.37.2"
typing-extensions = "^4.11.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
isort = "^5.13.2"
pytest = "^8.1.1"
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
