[tool.poetry]
name = "helmet-events-rss-feed"
version = "0.1.0"
description = ""
authors = ["Mikko Vihonen <mikko.vihonen@iki.fi>", "Jiri Grönroos <jiri.gronroos@iki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic-xml = "^2.9.0"
uvicorn = "^0.29.0"
jsonpath-ng = "^1.6.1"
python-dateutil="^2.9.0"
pillow="^10.3.0"
httpx = "^0.27.0"
pydantic = "^2.7.0"
starlette = "^0.37.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
isort = "^5.13.2"
pytest = "^8.1.1"
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
